<resources>
    <string name="app_name">AirSafe Eva02 1.2</string>
    <string name="air_safe">Air Safe</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="correo_electr_nico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="reg_strate">Registrate</string>
    <string name="sensores_titulo">Sensores</string>
    <string name="desc_sensores">Estos son los sensores actualmente conectados al sistema. Agrega o elimina sensores para monitorear la calidad del aire o detectar la presencia de humo en diferentes áreas del hogar.</string>
    <string name="icono_mas">+</string>
    <string name="aperturas_titulo">Aperturas</string>
    <string name="descripcion_2">Aquí aparecerán las aperturas automatizadas conectadas, como puertas, ventanas o cualquier otro acceso que tengas en tu hogar. Controla su estado y prográmalos según tus necesidades.</string>
    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="dispositivos">Dispositivos</string>
    <string name="programar">Programar</string>
    <string name="historial">Historial</string>
    <string name="ajustes">Ajustes</string>
    <string name="icono_mas_aperturas">+</string>
    <string name="historialText">Historial</string>
    <string name="ajustes_titulo">Ajustes</string>
    <string name="historial_titulo">Historial</string>
    <string name="programar_titulo">Programar</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="welcome">Bienvenido</string>
    <string name="login_failed">Error en el inicio de sesión</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">Contraseña no válida</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="repita_la_contrasena">Repita la contraseña</string>

</resources>