<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CambiarContracenaActivity">

    <!-- Imagen de fondo -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_ventana"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/efectoOscuro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <!-- Título -->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/air_safe"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- LinearLayout con el contenido -->
    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/rectangle_2"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp">


        <!-- Texto de bienvenida -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cambiar_contrasena"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Contraseña actual"
            app:endIconMode="password_toggle"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Nueva contraseña"
            app:endIconMode="password_toggle"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF">

            <EditText
                android:id="@+id/newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/repita_la_contrasena"
            app:endIconMode="password_toggle"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF">

            <EditText
                android:id="@+id/newpassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón de inicio de sesión -->
        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#1E88E5"
            android:padding="12dp"
            android:text="Actualizar Contraseña"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <!-- Enlace para registrarse -->
        <TextView
            android:id="@+id/volverInicioBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="Volver a Inicio"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>